[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/warp.png" type="Texture" id=1]
[ext_resource path="res://gui/PlayGUI.gd" type="Script" id=4]
[ext_resource path="res://gui/GUI_THEME.tres" type="Theme" id=7]
[ext_resource path="res://objects/player/player.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "flash_1up"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("1UPLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 1 ),
"transitions": PoolRealArray( 0.000541782, 0.000622344, 0.000178722, 0.001011 ),
"update": 0,
"values": [ Color( 0.0509804, 0.0431373, 0.0431373, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Theme" id=2]

[node name="GUI" type="Node"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
__meta__ = {
"_editor_description_": "this canvas layer is here to stop the gui from shaking. "
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
margin_right = 800.0
margin_bottom = 96.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": "main container to add margin to the whole screen."
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 785.0
margin_bottom = 85.0
custom_constants/separation = 9

[node name="LabelContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_right = 770.0
margin_bottom = 16.0
custom_constants/separation = 224

[node name="1UPLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/LabelContainer"]
modulate = Color( 0.0509804, 0.0431373, 0.0431373, 0 )
margin_right = 76.0
margin_bottom = 16.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "  1UP"

[node name="HighscoreLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/LabelContainer"]
margin_left = 300.0
margin_right = 471.0
margin_bottom = 16.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "high score"
align = 1
valign = 1

[node name="1UPFlash" type="AnimationPlayer" parent="CanvasLayer/MarginContainer/VBoxContainer/LabelContainer"]
autoplay = "flash_1up"
anims/flash_1up = SubResource( 1 )

[node name="ScoreContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 770.0
margin_bottom = 41.0
theme = SubResource( 2 )
custom_constants/separation = 222

[node name="Playerscore" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/ScoreContainer"]
margin_right = 108.0
margin_bottom = 16.0
theme = ExtResource( 7 )
text = "000000"

[node name="Highscore" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/ScoreContainer"]
margin_left = 330.0
margin_right = 438.0
margin_bottom = 16.0
theme = ExtResource( 7 )
text = "000000"

[node name="StatsContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_left = 5.0
margin_top = 50.0
margin_right = 765.0
margin_bottom = 70.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 280

[node name="LifeContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/StatsContainer"]
margin_right = 64.0
margin_bottom = 20.0
custom_constants/separation = 8

[node name="PlayerIcon" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer/StatsContainer/LifeContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 8 )
stretch_mode = 1

[node name="LifeCounter" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/StatsContainer/LifeContainer"]
margin_left = 28.0
margin_top = 2.0
margin_right = 64.0
margin_bottom = 18.0
theme = ExtResource( 7 )
text = "03	"

[node name="WarpContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/StatsContainer"]
margin_left = 344.0
margin_right = 408.0
margin_bottom = 20.0
custom_constants/separation = 8

[node name="WarpIcon" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer/StatsContainer/WarpContainer"]
modulate = Color( 0.635294, 1, 0.992157, 1 )
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 1 )
expand = true

[node name="WarpCounter" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/StatsContainer/WarpContainer"]
margin_left = 28.0
margin_top = 2.0
margin_right = 64.0
margin_bottom = 18.0
theme = ExtResource( 7 )
text = "02"

[node name="LevelCounter" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/StatsContainer"]
margin_left = 688.0
margin_top = 2.0
margin_right = 760.0
margin_bottom = 18.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.109804, 0.243137, 0.768627, 1 )
text = "L=01"
